--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+react-app-env.d.ts
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# deployment
+/.firebase
